clue-openai: Switch to Azure AI's OpenAI client
For the better JPMS support.